--- a/package.json
+++ b/package.json
@@ -23,9 +23,14 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+      "react-app"
+    ],
+    "env": {
+      "browser": true,
+      "es2021": true,
+      "node": true,
+      "jest": true
+    }
   },
   "browserslist": {
     "production": [
